united: fixed nav-collapse during collapse

--- a/united/bootstrap.css
+++ b/united/bootstrap.css
@@ -4223,16 +4223,16 @@ a.badge:hover {
   margin-bottom: 3px;
   border: 1px solid #97310e;
 }
-.navbar .nav-collapse.in > .nav li > a {
+.navbar .nav-collapse.collapse > .nav li > a {
   color: #ffffff;
   border-left: 0px solid #dd4814;
   border-right: 0px solid #dd4814;
 }
-.navbar .nav-collapse.in > .nav li > a:hover {
+.navbar .nav-collapse.collapse > .nav li > a:hover {
   background-color: #97310e;
 }
-.navbar .nav-collapse.in .navbar-form,
-.navbar .nav-collapse.in .navbar-search {
+.navbar .nav-collapse.collapse .navbar-form,
+.navbar .nav-collapse.collapse .navbar-search {
   border-top: 0px solid #dd4814;
   border-bottom: 0px solid #dd4814;
   -webkit-box-shadow: none;
