--- a/united/bootswatch.less
+++ b/united/bootswatch.less
@@ -43,7 +43,7 @@
 		border: 1px solid darken(@navbarBackground, 15%);
 	}
 
-	.nav-collapse.in > .nav li > a {
+	.nav-collapse.collapse > .nav li > a {
 		color: @white;
 		border-left: 0px solid @orange;
 		border-right: 0px solid @orange;
@@ -53,8 +53,8 @@
 		}
 	}
 
-	.nav-collapse.in .navbar-form,
-	.nav-collapse.in .navbar-search {
+	.nav-collapse.collapse .navbar-form,
+	.nav-collapse.collapse .navbar-search {
 		border-top: 0px solid @orange;
 		border-bottom: 0px solid @orange;
 		.box-shadow(none);
